--- a/notebooks/MVVB.ipynb
+++ b/notebooks/MVVB.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:59c86086a805dd531df830a76c4de3596f02eaabdf9ef638867405673b73a3b2"
+  "signature": "sha256:b6779534259f112aefe39f8aaf1cab1e58b779d02ffec77a710d0e115b7a1e78"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,16 +9,14 @@
   {
    "cells": [
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
       "Folktale Stability and  \n",
       "\n",
       "Transmission of Motifs"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     ]
     },
     {
      "cell_type": "heading",
