updates (new weighted levenshtein)

--- a/notebooks/MVVB.ipynb
+++ b/notebooks/MVVB.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b6779534259f112aefe39f8aaf1cab1e58b779d02ffec77a710d0e115b7a1e78"
+  "signature": "sha256:c825d7949b5124bf4926d75f72c56dab1e27a55bf27b2071290225a953234352"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -174,6 +174,27 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 667
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Motif sequences in this dataset are represented as strings of motifs separated by a semi colon. I transform this into a little more manageble format where each motif sequence is a list of motifs where each motif is represented by an integer:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from phd.utils import encoder\n",
+      "\n",
+      "motif_encoder = encoder()\n",
+      "df['motifseq'] = df['motifs'].apply(lambda s: map(motif_encoder, s.split(';')))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 708
     },
     {
      "cell_type": "markdown",
@@ -2490,13 +2511,13 @@
       "\n",
       "def levenshtein_location(loc_a, loc_b, df, level, **kwargs):\n",
       "    def fn(s1, s2):\n",
-      "        return dist.levenshtein(s1.split(';'), s2.split(';'), **kwargs)\n",
+      "        return dist.nlevenshtein(s1.split(';'), s2.split(';'), **kwargs)\n",
       "    return distance_between(loc_a, loc_b, df, level, fn)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 676
+     "prompt_number": 705
     },
     {
      "cell_type": "markdown",
@@ -2559,7 +2580,7 @@
       "    print jaccard_location(loc_a, loc_b, df, \"province\")\n",
       "for loc_a, loc_b in combinations(['Noord-Holland', 'Zuid-Holland', 'Utrecht'], 2):\n",
       "    print 'Levenshtein distance between %s and %s:' % (loc_a, loc_b),\n",
-      "    print levenshtein_location(loc_a, loc_b, df, \"province\", normalized=True)"
+      "    print levenshtein_location(loc_a, loc_b, df, \"province\", method=2)"
      ],
      "language": "python",
      "metadata": {},
@@ -2607,7 +2628,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "0.593031358885\n",
+        "0.592232868757\n",
         "Levenshtein distance between Zuid-Holland and Utrecht: "
        ]
       },
@@ -2615,11 +2636,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "0.6814556717\n"
+        "0.680758807588\n"
        ]
       }
      ],
-     "prompt_number": 664
+     "prompt_number": 706
     },
     {
      "cell_type": "markdown",
@@ -3054,8 +3075,214 @@
       "Both the Levenshtein distance and the Jaccard distance penalize mismatching motifs quite severe. However, some motifs are more related, more similar than other motifs. For example the motif D141.1 \"Transformation: woman to bitch\" is highly similar to D141 \"Transformation: man to dog\", yet it is penalized just as much as for the motif E601 \"Reincarnation: former lives remembered\" or any other motif.\n",
       "\n",
       "To account for this I propose a new method to compute the distance between two motifs that incorporates the hierarchical relations between motifs in Thompson's *Motif-Index*. The distance between two motifs can be defined in terms of the shortest path length through the hierarchical tree between two motifs. The distance between D141 and D141.1 would then be 1.\n",
-      "\n"
+      "\n",
+      "Thompson's *Motif-Index* has been parsed and stored as an directed graph. I load the graph using the Python interface to [igraph](http://igraph.org/):"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import igraph\n",
+      "\n",
+      "TMI = igraph.Graph.Read(\"../data/tmi.graphml\", format=\"graphml\")\n",
+      "TMI_ID = {node['id']: node.index for node in TMI.vs}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 710
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Using this graph we can define a function that returns the distance between motifs as follows:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from phd.utils import memo\n",
+      "\n",
+      "@memo\n",
+      "def weight(m1, m2, penalty=10):\n",
+      "    if m1[0] != m2[0]:\n",
+      "        return penalty\n",
+      "    try:\n",
+      "        return TMI.shortest_paths_dijkstra(\n",
+      "            TMI_ID[m1], TMI_ID[m2], weights='weight')[0][0]\n",
+      "    except KeyError:\n",
+      "        return penalty    "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 904
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Let's try it out:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "weight(\"D142.1\", \"D141\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 905,
+       "text": [
+        "3.0"
+       ]
+      }
+     ],
+     "prompt_number": 905
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We will plug that into a new definition of levenshtein distance, as follows:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from array import array\n",
+      "\n",
+      "def weighted_leven(seq1, seq2, GAP=2, fn=weight):\n",
+      "    if seq1 == seq2: return 0.0\n",
+      "    if not seq1 or not seq2: return 1.0\n",
+      "    len1, len2 = len(seq1), len(seq2)\n",
+      "    if len1 < len2:\n",
+      "        len1, len2 = len2, len1\n",
+      "        seq1, seq2 = seq2, seq1\n",
+      "    column = array('f')\n",
+      "    for x in range(len2 + 1):\n",
+      "        column.append(x * GAP)\n",
+      "    length = array('f')\n",
+      "    for x in range(len2 + 1):\n",
+      "        length.append(x * GAP)\n",
+      "    \n",
+      "    for x in range(1, len1 + 1):\n",
+      "        column[0] = length[0] = x * GAP\n",
+      "        last = llast = (x-1) * GAP\n",
+      "        for y in range(1, len2 + 1):\n",
+      "            # distance\n",
+      "            old = column[y]\n",
+      "            insert = column[y - 1] + GAP\n",
+      "            delete = column[y] + GAP\n",
+      "            replace = last + fn(seq1[x - 1], seq2[y - 1])\n",
+      "            column[y] = min(insert, delete, replace)\n",
+      "            last = old\n",
+      "            # length\n",
+      "            lold = length[y]\n",
+      "            linsert = length[y - 1] + (GAP if insert == column[y] else 0)\n",
+      "            ldelete = length[y] + (GAP if delete == column[y] else 0)\n",
+      "            lreplace = llast + (fn(seq1[x - 1], seq2[y - 1]) \n",
+      "                                if replace == column[y] else 0)\n",
+      "            length[y] = max(linsert, ldelete, lreplace)\n",
+      "            llast = lold\n",
+      "    return column[y] / float(length[y])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 907
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The following small test function shows that the function seem to work correctly..."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def test_leven():\n",
+      "    assert weighted_leven(\n",
+      "          [\"B103\", \"D1601.5\", \"D1030\"], [\"B103\", \"D1601.5\", \"D1030\"]) == 0\n",
+      "    assert weighted_leven(\n",
+      "           [\"B103\", \"D1601.5\", \"D1030.1\"], [\"B103\", \"D1601.5\", \"D1030\"]) == (1.0 / (3 * 2))\n",
+      "    assert weighted_leven(\n",
+      "           [\"B103\", \"D1601.5\", \"D1030.1\"], [\"B103\", \"D1601\", \"D1030\"]) == (2.0 / (3 * 2))\n",
+      "    assert weighted_leven(\n",
+      "           [\"B103\", \"G303\", \"D1030.1\"], [\"B103\", \"D1601.5\", \"D1030\"]) == \\\n",
+      "           ((2 + 2 + 1) / (4. * 2))\n",
+      "    print 'all tests passed'\n",
+      "    \n",
+      "test_leven()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "all tests passed\n"
+       ]
+      }
+     ],
+     "prompt_number": 909
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Naturally, the new function is computationally more expensive than the plain levenshtein. But as the following profiling experiments show, not too expensive:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "timeit weighted_leven([\"B103\", \"G303\", \"D1030.1\"], [\"B103\", \"D1601.5\", \"D1030\"])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "10000 loops, best of 3: 37.3 \u00b5s per loop\n"
+       ]
+      }
+     ],
+     "prompt_number": 921
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "timeit dist.levenshtein([\"B103\", \"G303\", \"D1030.1\"], [\"B103\", \"D1601.5\", \"D1030\"], normalized=True)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "10000 loops, best of 3: 20.6 \u00b5s per loop\n"
+       ]
+      }
+     ],
+     "prompt_number": 922
     },
     {
      "cell_type": "code",
@@ -3069,7 +3296,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 640
+     "prompt_number": 767
     },
     {
      "cell_type": "code",
