--- a/notebooks/MVVB.ipynb
+++ b/notebooks/MVVB.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c825d7949b5124bf4926d75f72c56dab1e27a55bf27b2071290225a953234352"
+  "signature": "sha256:f777565eca6c4cb919bd6c15e6f640fcea4d403ded097bb865a59a38a0f8fc21"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2511,13 +2511,13 @@
       "\n",
       "def levenshtein_location(loc_a, loc_b, df, level, **kwargs):\n",
       "    def fn(s1, s2):\n",
-      "        return dist.nlevenshtein(s1.split(';'), s2.split(';'), **kwargs)\n",
+      "        return dist.nlevenshtein(s1.split(';'), s2.split(';'), method=2)\n",
       "    return distance_between(loc_a, loc_b, df, level, fn)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 705
+     "prompt_number": 1009
     },
     {
      "cell_type": "markdown",
@@ -3107,7 +3107,7 @@
       "from phd.utils import memo\n",
       "\n",
       "@memo\n",
-      "def weight(m1, m2, penalty=10):\n",
+      "def weight(m1, m2, penalty=20):\n",
       "    if m1[0] != m2[0]:\n",
       "        return penalty\n",
       "    try:\n",
@@ -3119,7 +3119,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 904
+     "prompt_number": 1008
     },
     {
      "cell_type": "markdown",
@@ -3140,13 +3140,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 905,
+       "prompt_number": 997,
        "text": [
         "3.0"
        ]
       }
      ],
-     "prompt_number": 905
+     "prompt_number": 997
     },
     {
      "cell_type": "markdown",
@@ -3199,7 +3199,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 907
+     "prompt_number": 998
     },
     {
      "cell_type": "markdown",
@@ -3237,7 +3237,7 @@
        ]
       }
      ],
-     "prompt_number": 909
+     "prompt_number": 1000
     },
     {
      "cell_type": "markdown",
@@ -3278,31 +3278,111 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "10000 loops, best of 3: 20.6 \u00b5s per loop\n"
+        "10000 loops, best of 3: 20.2 \u00b5s per loop\n"
        ]
       }
      ],
-     "prompt_number": 922
+     "prompt_number": 938
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Finally lets define a utility function that computes the weighted levenshtein distance between two locations:"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "\n",
-      "dm = location_dm(df[(df.motifs.apply(lambda m: len(m.split(';')) > 1)) & \n",
-      "#                     (df.atugenre == 'TALES OF MAGIC') &\n",
-      "                    (df.storytypeCount > 1)], level='province')"
+      "def weighted_leven_location(loc_a, loc_b, df, level, GAP=5):\n",
+      "    def fn(s1, s2):\n",
+      "        return weighted_leven(s1.split(';'), s2.split(';'), GAP=GAP, fn=weight)\n",
+      "    return distance_between(loc_a, loc_b, df, level, fn)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 767
+     "prompt_number": 1001
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "df.groupby('storytype').storytype.transform('count')"
+      "for loc_a, loc_b in combinations(['Noord-Holland', 'Zuid-Holland', 'Utrecht'], 2):\n",
+      "    print 'Weighted Leven distance between %s and %s:' % (loc_a, loc_b),\n",
+      "    print weighted_leven_location(loc_a, loc_b, df, \"province\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Weighted Leven distance between Noord-Holland and Zuid-Holland: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.353999254842\n",
+        "Weighted Leven distance between Noord-Holland and Utrecht: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.58240902086\n",
+        "Weighted Leven distance between Zuid-Holland and Utrecht: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.6769518648\n"
+       ]
+      }
+     ],
+     "prompt_number": 1004
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "All is set and done to run some experiments, using different settings, such as different distance metrics, different selections of the data (e.g. oral stories versus literary stories), different levels of comparison (e.g. placenames or provinces) and so on and so forth. \n",
+      "\n",
+      "Before we will do that, we need to come up with a way to evaluate the resulting distance matrices (later we will also need a way to validate and evaluate the cluster solutions). One way to validate the distance matrices is by means of a metric called \"Local incoherence\". This metric computes the quality of a measurement of story differences. The idea behind the metric is that a location should be more similar to a location nearby than to a location a little further away. Local incoherence is defined as follows:\n",
+      "\n",
+      "$$I_L = \\frac{1}{n} \\sum^n_{i=1} \\frac{A_i - \\hat{A_i}}{\\hat{A_i}}$$\n",
+      "\n",
+      "where\n",
+      "\n",
+      "$$A_i = \\sum^k_{j=1} d_{ij} \\cdot 2^{jp}$$\n",
+      "\n",
+      "and\n",
+      "\n",
+      "$$\\hat{A_i} = \\sum^k_{j=1} \\hat{d_{ij}} \\cdot 2^{jp}$$\n",
+      "\n",
+      "where $n$ is the number of locations, $d_{ij}$ is the geographical distance between location $i$ and location $j$ ordered by narrative distance, $\\hat{d_{ij}}$ is the geographical distance between $i$ and $j$, ordered by geographical distance, $k$ is the upper limit for the number of dialectological neighborhood locations used and $p$ is a parameter that ???.\n",
+      "\n",
+      "I will make use of the program `linc`, part of the dialectometrical software package [RuG/L04](http://www.let.rug.nl/~kleiweg/L04/) to compute this score:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import sh, os\n",
+      "\n",
+      "def linc(distance_file, coordinate_file):\n",
+      "    _linc = sh.Command(os.path.expanduser(\"~/local/RuG-L04/bin/linc\"))\n",
+      "    return float(_linc(\"-L\", distance_file, coordinate_file))\n",
+      "\n",
+      "linc(\"dm.dif\", \"provinces.coo\")"
      ],
      "language": "python",
      "metadata": {},
@@ -3310,44 +3390,180 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 699,
+       "prompt_number": 971,
        "text": [
-        "0      4\n",
-        "1      9\n",
-        "2     31\n",
-        "3      4\n",
-        "4      3\n",
-        "5     37\n",
-        "6      6\n",
-        "7      2\n",
-        "8     37\n",
-        "9     31\n",
-        "10    31\n",
-        "11    31\n",
-        "12    31\n",
-        "13    24\n",
-        "14     3\n",
-        "...\n",
-        "1382     2\n",
-        "1383     3\n",
-        "1384     1\n",
-        "1385    12\n",
-        "1386    12\n",
-        "1387     1\n",
-        "1388     9\n",
-        "1389     1\n",
-        "1390     2\n",
-        "1391     6\n",
-        "1392     1\n",
-        "1393    11\n",
-        "1394    11\n",
-        "1395    11\n",
-        "1396    11\n",
-        "Name: storytype, Length: 1397, dtype: object"
+        "0.712756"
        ]
       }
      ],
-     "prompt_number": 699
+     "prompt_number": 971
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The `linc` program takes as input a distance file matrix in a particular [format](http://www.let.rug.nl/~kleiweg/L04/Manuals/formats.html#dif). The following function produces that format: "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def to_diff_matrix_file(dm, filepath):\n",
+      "    \"Write a distance matrix to the format required by RuG/L04.\"\n",
+      "    with open(filepath, 'w') as outfile:\n",
+      "        outfile.write(\"%s\\n\" % dm.shape[0])\n",
+      "        for label in dm.index:\n",
+      "            outfile.write('%s\\n' % label)\n",
+      "        for i in range(1, dm.shape[0]):\n",
+      "            for j in range(i):\n",
+      "                outfile.write(\"%s\\n\" % \n",
+      "                    (dm.values[i,j] if not np.isnan(dm.values[i,j]) else \"NA\"))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 972
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "First I will compare all three distance metrics (Jaccard, Levenshtein, Weighted Levenshtein) where I will experiment with a range of parameter settings for the weighted Levenshtein. To start with I will compute the narrative distances between provinces."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "validation = {}\n",
+      "for metric in [jaccard_location, levenshtein_location]:\n",
+      "    dm = location_dm(df[(df.motifs.apply(lambda m: len(m.split(';')) > 1)) & \n",
+      "                        (df.storytypeCount > 1)], \n",
+      "                     level='province', fn=metric)\n",
+      "    to_diff_matrix_file(dm, metric.__name__ + \".dif\")\n",
+      "    validation[metric.__name__] = {'score': linc(metric.__name__ + \".dif\", \"provinces.coo\")}\n",
+      "\n",
+      "for gap in np.arange(0.5, 5, 0.5):\n",
+      "    fn = partial(weighted_leven_location, GAP=gap)\n",
+      "    name = \"wleven\" + str(gap)\n",
+      "    dm = location_dm(df[(df.motifs.apply(lambda m: len(m.split(';')) > 1)) & \n",
+      "                        (df.storytypeCount > 1)], \n",
+      "                     level='province', fn=fn)\n",
+      "    to_diff_matrix_file(dm, name + \".dif\")\n",
+      "    validation[name] = {'score': linc(name + \".dif\", \"provinces.coo\")}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1040
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pd.DataFrame.from_dict(validation).T"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>score</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>jaccard_location</th>\n",
+        "      <td> 0.641162</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>levenshtein_location</th>\n",
+        "      <td> 0.621501</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>wleven0.5</th>\n",
+        "      <td> 0.627890</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>wleven1.0</th>\n",
+        "      <td> 0.627890</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>wleven1.5</th>\n",
+        "      <td> 0.626905</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>wleven2.0</th>\n",
+        "      <td> 0.626905</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>wleven2.5</th>\n",
+        "      <td> 0.614662</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>wleven3.0</th>\n",
+        "      <td> 0.626905</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>wleven3.5</th>\n",
+        "      <td> 0.623082</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>wleven4.0</th>\n",
+        "      <td> 0.624759</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>wleven4.5</th>\n",
+        "      <td> 0.626024</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>11 rows \u00d7 1 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1041,
+       "text": [
+        "                         score\n",
+        "jaccard_location      0.641162\n",
+        "levenshtein_location  0.621501\n",
+        "wleven0.5             0.627890\n",
+        "wleven1.0             0.627890\n",
+        "wleven1.5             0.626905\n",
+        "wleven2.0             0.626905\n",
+        "wleven2.5             0.614662\n",
+        "wleven3.0             0.626905\n",
+        "wleven3.5             0.623082\n",
+        "wleven4.0             0.624759\n",
+        "wleven4.5             0.626024\n",
+        "\n",
+        "[11 rows x 1 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 1041
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "\n",
+      "dm = location_dm(df[(df.motifs.apply(lambda m: len(m.split(';')) > 1)) & \n",
+      "#                     (df.atugenre == 'TALES OF MAGIC') &\n",
+      "                    (df.storytypeCount > 1)], level='province', fn=jaccard_location)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 942
     },
     {
      "cell_type": "code",
@@ -3372,7 +3588,7 @@
        ]
       }
      ],
-     "prompt_number": 693
+     "prompt_number": 940
     },
     {
      "cell_type": "code",
@@ -3403,7 +3619,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 581
+     "prompt_number": 943
     },
     {
      "cell_type": "code",
